--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Store</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://nekydhfwaekmqbkcpkdc.supabase.co/storage/v1/object/public/images/logoMiCarritoSinFondo.png">
 </head>
 <body>
   <app-root></app-root>
